# Visualisation

./: .gitignore
TP1/: Foot.pvsm  Question 29.pvsm  Question17.pvsm  State.pvsm  TP1.mkd
TP2/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
TP2/.cache/clangd/index/: main.cpp.606337C5EEFB5B50.idx
TP2/TP2/TP2.xcodeproj/: project.pbxproj
TP2/TP2/TP2.xcodeproj/project.xcworkspace/xcuserdata/arthur.xcuserdatad/: UserInterfaceState.xcuserstate
TP2/sources/: CustomInteractor.cpp  CustomInteractor.hpp  globalVal.hpp
TP3/: CMakeLists.txt  Importer.h
TP3/data/scalarFields/2-grid/: data.txt
TP3/data/scalarFields/3-grid/: data.txt
TP3/data/tensorFields/3-grid/: output-0.raw  output-1.raw  output-2.raw  output-3.raw  output-4.raw  output-5.raw  output-6.raw  output-7.raw  output-8.raw  output.txt
TP3/data/vectorFields/2-grid/: U.raw  V.raw  data.txt
TP3/data/vectorFields/3-grid/: data.txt
TP3/data/vectorFields/3-triangulation/: data.tri
